twig-cli/src/snapshots/twig_cli__tree_renderer__tests__basic_tree.snap
---
source: twig-cli/src/tree_renderer.rs
expression: output_str
---
main
└── feature-1 (current)
