twig-cli/src/snapshots/twig_cli__tree_renderer__tests__tree_with_cross_references.snap
---
source: twig-cli/src/tree_renderer.rs
expression: output_str
---
main
└── shared-feature (current)

develop

release
