twig-cli/src/snapshots/twig_cli__tree_renderer__tests__tree_with_deep_nesting.snap
---
source: twig-cli/src/tree_renderer.rs
expression: output_str
---
main
└── feature1                              [FEAT-1]    [PR#1]
    └── feature1-1                        [FEAT-2]
        └── feature1-1-1                  [PR#41]
            └── feature1-1-1-1 (current)  [FEAT-4]    [PR#3]
