twig-cli/src/snapshots/twig_cli__tree_renderer__tests__tree_with_github_pr_only.snap
---
source: twig-cli/src/tree_renderer.rs
expression: output_str
---
main
└── feature-pr-only (current)  [PR#123]
