twig-cli/src/snapshots/twig_cli__tree_renderer__tests__tree_with_jira_and_github.snap
---
source: twig-cli/src/tree_renderer.rs
expression: output_str
---
PROJ-123/feature-branch  [PROJ-123]  [PR#456]
