twig-cli/src/snapshots/twig_cli__tree_renderer__tests__tree_with_jira_issue.snap
---
source: twig-cli/src/tree_renderer.rs
expression: output_str
---
main
├── PROJ-123/feat-one (current)                [PROJ-123]  [PR#456]
└── PROJ-124/feat-two-add-more-hats (current)  [PROJ-124]  [PR#789]
