twig-cli/src/snapshots/twig_cli__tree_renderer__tests__tree_with_max_depth.snap
---
source: twig-cli/src/tree_renderer.rs
expression: output_str
---
main
└── level1
    └── level2
