twig-cli/src/snapshots/twig_cli__tree_renderer__tests__tree_with_multiple_roots.snap
---
source: twig-cli/src/tree_renderer.rs
expression: output_str
---
main
└── feature-a

develop
└── feature-b (current)
